update header template, replace tabs with spaces