@@ -27,42 +27,42 @@ import lombok.experimental.UtilityClass;
 @UtilityClass
 public class TransformFilesToESM {
 
-	private static final String FRONTEND_FOLDER_PATH      = "/META-INF/frontend/";
-	private static final String SAPL_MODE_FILENAME        = "sapl-mode.js";
-	private static final String XTEXT_CODEMIRROR_FILENAME = "xtext-codemirror.js";
+    private static final String FRONTEND_FOLDER_PATH      = "/META-INF/frontend/";
+    private static final String SAPL_MODE_FILENAME        = "sapl-mode.js";
+    private static final String XTEXT_CODEMIRROR_FILENAME = "xtext-codemirror.js";
 
-	/**
-	 * Entry point for conversion.
-	 * 
-	 * @param args command line parameters
-	 */
-	public void main(String[] args) {
-		var classPathDir     = new File(TransformFilesToESM.class.getResource("/").getPath());
-		var targetFolderPath = classPathDir + FRONTEND_FOLDER_PATH;
+    /**
+     * Entry point for conversion.
+     * 
+     * @param args command line parameters
+     */
+    public void main(String[] args) {
+        var classPathDir     = new File(TransformFilesToESM.class.getResource("/").getPath());
+        var targetFolderPath = classPathDir + FRONTEND_FOLDER_PATH;
 
-		convertFileToESM(targetFolderPath + SAPL_MODE_FILENAME, SaplModeConverter::convertToESM);
-		convertFileToESM(targetFolderPath + XTEXT_CODEMIRROR_FILENAME, XtextCodemirrorConverter::convertToESM);
-	}
+        convertFileToESM(targetFolderPath + SAPL_MODE_FILENAME, SaplModeConverter::convertToESM);
+        convertFileToESM(targetFolderPath + XTEXT_CODEMIRROR_FILENAME, XtextCodemirrorConverter::convertToESM);
+    }
 
-	private void convertFileToESM(String filePath, Converter converter) {
-		File file = new File(filePath);
+    private void convertFileToESM(String filePath, Converter converter) {
+        File file = new File(filePath);
 
-		if (file.isFile()) {
-			try {
-				String   content = Files.readString(file.toPath());
-				String[] terms   = content.trim().split("\\s+");
-				if (!terms[0].equals("import")) {
-					String result = converter.convert(content);
-					Files.write(file.toPath(), result.getBytes());
-				}
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-		}
-	}
+        if (file.isFile()) {
+            try {
+                String   content = Files.readString(file.toPath());
+                String[] terms   = content.trim().split("\\s+");
+                if (!terms[0].equals("import")) {
+                    String result = converter.convert(content);
+                    Files.write(file.toPath(), result.getBytes());
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+    }
 
-	private interface Converter {
-		String convert(String content);
-	}
+    private interface Converter {
+        String convert(String content);
+    }
 
 }
